// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monitor Component it selects the correct colors based on dark mode 1`] = `
<div
  class="react-draggable"
  style="transform: translate(0px,0px);"
>
  <span
    class="ContextMenuTrigger"
    data-disabled=""
    data-state="closed"
  >
    <div>
      <div>
        <div>
          My label
        </div>
        <div
          style="color: rgb(187, 187, 187);"
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`Monitor Component it selects the correct colors based on default color mode 1`] = `
<div
  class="react-draggable"
  style="transform: translate(0px,0px);"
>
  <span
    class="ContextMenuTrigger"
    data-disabled=""
    data-state="closed"
  >
    <div>
      <div>
        <div>
          My label
        </div>
        <div
          style="color: rgb(68, 68, 68);"
        />
      </div>
    </div>
  </span>
</div>
`;
